# python-quart-social-media-app

./: my_db.db
api/: pyproject.toml
api/src/api/: __init__.py
api/src/api/db/: __init__.py
api/src/api/db/mixins/: __init__.py  auto_primary_key.py  auto_table_name.py
api/src/api/db/models/: __init__.py  base.py  comment.py  like.py  post.py  user.py
api/src/api/models/: __init__.py  comment.py  like.py  post.py  user.py
api/src/api/routes/: user.py
