[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Acutapugione <acuta.pugione@gmail.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
quart = "^0.19.6"
sqlalchemy = "^2.0.32"
quart-schema = "^0.20.0"
msgspec = "^0.18.6"

[tool.poetry.scripts]
start = "api:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
